examples/effects/m7b_12_row_var_var_first.err.expected
error: row variable must be the last item in the row
  --> examples/effects/m7b_12_row_var_var_first.kai:10:41
     |
  10 | fn bad(body: () -> Unit / e) : Unit / e + Io = body()
     |                                         ^
