examples/effects/m7b_12_row_var_var_first.kai
# m7b #12 negative — a row variable must be the last item in the
# row. Putting a label after a row variable is rejected. We do not
# normalise; the parser enforces the canonical "labels first, row
# variable last" form.

effect Io {
  print(s: String) : Unit
}

fn bad(body: () -> Unit / e) : Unit / e + Io = body()

fn main() : Int { 0 }
